@@ -41,3 +41,8 @@ default: build
     cat xx0[0-2] > README.adoc
     rm xx0[0-2]
     echo {{ if `git status --porcelain README.adoc` == '' { 'README is up-to-date' } else { 'README has been updated!' } }}
+
+# Generate GFM version README for crates.io
+@generate-gfm-readme:
+    asciidoctor -b docbook5 -o - README.adoc | pandoc -f docbook -t gfm -o doc/crates.io/README.md
+    echo {{ if `git status --porcelain doc/crates.io/README.md` == '' { 'README for crates.io is up-to-date' } else { 'README for crates.io has been updated!' } }}
